# AI_agent_hackathon

./: .env.example  .env.template  .gitignore  ARCHITECTURE.md  CLAUDE_DESKTOP_SETUP.md  DEPLOYMENT_SUMMARY.md  Dockerfile  LOCAL_DEPLOYMENT.md  Makefile  QUICK_START.md  README.md  README_OLD.md  SYSTEM_OVERVIEW.md  TRUEFOUNDRY_DEPLOYMENT.md  USAGE.md  app.py  appointment_schema.json  build_agent.ipynb  build_agent.py  chat_agent.py  claude_desktop_config.json  config.py  demo.py  deploy_truefoundry.py  docker-compose.yml  example_queries.py  fly.toml  generate_claude_config.py  main.py  main2.py  main_comprehensive.py  phenoml_integration.py  phenoml_prompt_template.py  phenoml_real_integration.py  pyproject.toml  railway.json  render.yaml  request.py  request2.py  requirements.txt  (+7 more)
.ipynb_checkpoints/: build_agent-checkpoint.ipynb
data/: cover_letter_template.txt  job_matches.json  resume_analysis.json  sample_resume.txt  user_data.json
front_end/: .env  requirements.txt  styles.css  whisper-app.py
src/linkedin_job_applier/: __init__.py  config.py  fastmcp_server.py  job_applier.py  job_matcher.py  job_scraper.py  resume_analyzer.py  resume_optimizer.py  server.py  user_manager.py
