[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linkedin-job-applier-mcp"
version = "1.0.0"
description = "AI-powered LinkedIn job application automation with resume optimization - MCP Server"
authors = [{name = "OpenHands", email = "openhands@all-hands.dev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.12.4",
    "mcp[cli]>=1.9.1",
    "selenium>=4.15.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "pydantic>=2.0.0",
    "nltk>=3.8.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-docx>=1.1.0",
    "PyPDF2>=3.0.0",
    "aiofiles>=23.0.0",
    "asyncio-throttle>=1.0.0",
    "webdriver-manager>=4.0.0",
    "fake-useragent>=1.4.0",
    "undetected-chromedriver>=3.5.0",
    "fastapi>=0.119.0",
    "uvicorn>=0.34.3",
    "starlette>=0.27.0",
    "truefoundry>=0.12.1",
    "setuptools>=68.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.0.0",
]

[project.scripts]
linkedin-job-applier = "linkedin_job_applier.server:main"
linkedin-job-applier-fastmcp = "linkedin_job_applier.fastmcp_server:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true